remove Boost.MPL adaptors

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,12 +5,9 @@
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
 set(EXCLUDE)
-if(NOT Boost_FOUND)
-    list(APPEND EXCLUDE "mpl" "sfinae")
+if(NOT Boost_FOUND OR Boost_MINOR_VERSION LESS 61)
+    list(APPEND EXCLUDE "sfinae")
 else()
-    if(Boost_MINOR_VERSION LESS 61)
-        list(APPEND EXCLUDE "sfinae")
-    endif()
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
