--- a/test/header/CMakeLists.txt
+++ b/test/header/CMakeLists.txt
@@ -2,12 +2,5 @@
 # Distributed under the Boost Software License, Version 1.0.
 # See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt
 
-set(EXCLUDE)
-if(NOT Boost_FOUND)
-    list(APPEND EXCLUDE "external")
-else()
-    include_directories(${Boost_INCLUDE_DIRS})
-endif()
-
 add_custom_target(test.header)
-header_test_tree(Metal test.header ${METAL_INCLUDE_DIR} EXCLUDE ${EXCLUDE})
+header_test_tree(Metal test.header ${METAL_INCLUDE_DIR})
