--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -8,13 +8,17 @@ if(NOT DOXYGEN_FOUND)
     return()
 endif()
 
-configure_file(Doxyfile.in METAL_DOXYFILE @ONLY)
+configure_file(Doxyfile.in Doxyfile @ONLY)
 
 add_custom_target(doc
     COMMAND ${CMAKE_COMMAND} -E remove_directory "html"
-    COMMAND ${DOXYGEN_EXECUTABLE} METAL_DOXYFILE
+    COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile
     COMMAND ${CMAKE_COMMAND} -E remove
         "html/*.png" "html/dynsections.js" "html/doxygen.css" "html/tabs.css"
         "html/dir_*.html" "html/namespacemetal.html" "html/modules.html"
         "html/namespacemembers_type.html"
 )
+
+set_target_properties(doc PROPERTIES OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/html/")
+
+deploy_doc(Metal doc)
