--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,6 @@
 # Distributed under the Boost Software License, Version 1.0.
 # See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt
 
-shallow_clone: true
-
 environment:
     matrix:
       - CHECK_DOC: true
@@ -34,6 +32,8 @@ configuration:
   - Debug
 
 install:
+  - git -C "%APPVEYOR_BUILD_FOLDER%" submodule update --init --recursive
+
   - if "%CHECK_DOC%" equ "true" (choco install doxygen.portable)
 
 before_build:
