--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,3 +58,9 @@ build_script:
     ) else (
         pushd "%METAL_BUILD_PATH%" && ctest -C "%CONFIGURATION%" --output-on-failure -E ^test.format & popd
     )
+
+notifications:
+  - provider: Webhook
+    url: https://webhooks.gitter.im/e/5daddf3d6cedeb27ba90
+    on_build_failure: true
+    on_build_status_changed: true
