[ci] explicitly build target install

--- a/.travis.yml
+++ b/.travis.yml
@@ -265,15 +265,18 @@ before_install:
   - git config --global user.name "Travis Bot"
   - git config --global user.email "\<\>"
 
-  - METAL_SOURCE_PATH="${TRAVIS_BUILD_DIR}"
+  - SOURCE_PATH="${TRAVIS_BUILD_DIR}"
 
-  - METAL_BUILD_PATH="${TRAVIS_BUILD_DIR}/build"
-  - mkdir -p "${METAL_BUILD_PATH}"
+  - BUILD_PATH="${TRAVIS_BUILD_DIR}/build/"
+  - mkdir -p "${BUILD_PATH}"
 
-  - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
+  - INSTALL_PATH="${TRAVIS_BUILD_DIR}/install/"
+  - mkdir -p "${INSTALL_PATH}"
+
+  - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps/"
   - mkdir -p "${DEPS_PATH}"
 
-  - GITHUB_PATH="${TRAVIS_BUILD_DIR}/github"
+  - GITHUB_PATH="${TRAVIS_BUILD_DIR}/github/"
   - mkdir -p "${GITHUB_PATH}"
 
 install:
@@ -315,7 +318,8 @@ install:
     (cd "${DEPS_PATH}/boost" && ./bootstrap.sh && ./b2 headers)
 
 before_script:
-  - CMAKE_ARGS=("${METAL_SOURCE_PATH}")
+  - CMAKE_ARGS=("${SOURCE_PATH}")
+  - CMAKE_ARGS+=("-DCMAKE_INSTALL_PREFIX=${INSTALL_PATH}")
 
   - |
     if [[ -n "${CXX}" && -n "${CXXVER}" ]]
@@ -332,14 +336,14 @@ before_script:
     CMAKE_ARGS+=("-DCMAKE_CXX_FLAGS=-DMETAL_TEST_GEN_LIMIT=9")
     CMAKE_ARGS+=("-DBOOST_ROOT=${DEPS_PATH}/boost")
 
-  - (cd "${METAL_BUILD_PATH}" && cmake ${CMAKE_ARGS[@]})
+  - (cd "${BUILD_PATH}" && cmake ${CMAKE_ARGS[@]})
 
   - |
     function publish {
         git clone https://brunocodutra:${GITHUB_TOKEN}@github.com/brunocodutra/metal -q --depth 1 --branch=$2 "${GITHUB_PATH}/$2" &> /dev/null || return 1
         cp -r "${GITHUB_PATH}/$2/.git/" $1                                                                                        &> /dev/null || return 2
         git -C $1 add --all .                                                                                                     &> /dev/null || return 3
-        git -C $1 commit --allow-empty -m "update to $(git -C ${METAL_SOURCE_PATH} rev-parse --short HEAD)"                       &> /dev/null || return 4
+        git -C $1 commit --allow-empty -m "update to $(git -C ${SOURCE_PATH} rev-parse --short HEAD)"                       &> /dev/null || return 4
         git -C $1 push origin $2                                                                                                  &> /dev/null || return 5
     }
 
@@ -347,20 +351,21 @@ script:
   - |
     if [[ "${DEPLOY}" == "true" ]]
     then
-        cmake --build "${METAL_BUILD_PATH}" --target deploy && tree "${METAL_BUILD_PATH}/dist/" || exit 1
+        cmake --build "${BUILD_PATH}" --target install || exit $?
+        tree "${INSTALL_PATH}" || exit $?
         if [[ "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" ]]
         then
-            publish "${METAL_BUILD_PATH}/dist/share/Metal/doc" gh-pages || exit $?
-            publish "${METAL_BUILD_PATH}/dist/include/" standalone || exit $?
+            publish "${INSTALL_PATH}/share/Metal/doc" gh-pages || exit $?
+            publish "${INSTALL_PATH}/include/" standalone || exit $?
         fi
     elif [[ "${CHECK_DOC}" == "true" ]]
     then
-        ! cmake --build "${METAL_BUILD_PATH}" --target doc 2>&1 | grep --color -iE "warning|error" || exit 1
+        ! cmake --build "${BUILD_PATH}" --target doc 2>&1 | grep --color -iE "warning|error" || exit 1
     elif [[ -n "${CHECK_FORMATTING}" ]]
     then
-        (cd "${METAL_BUILD_PATH}" && ctest --output-on-failure -R ^test.format)
+        (cd "${BUILD_PATH}" && ctest --output-on-failure -R ^test.format)
     else
-        (cd "${METAL_BUILD_PATH}" && ctest --output-on-failure -E ^test.format)
+        (cd "${BUILD_PATH}" && ctest --output-on-failure -E ^test.format)
     fi
 
 notifications:
