avoid changing cmake defaults

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,10 @@
 
 cmake_minimum_required(VERSION 3.8)
 
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "")
-endif()
+include(cmake/Deploy.cmake)
+include(cmake/Test.cmake)
 
 project(Metal CXX)
-
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-
-include(Deploy)
-include(Test)
 
 set(METAL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
