--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,23 +40,23 @@ before_build:
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   - if defined BINDIR (set "PATH=%BINDIR%;%PATH%")
 
-  - set "METAL_SOURCE_PATH=%APPVEYOR_BUILD_FOLDER%"
-  - set "METAL_BUILD_PATH=%APPVEYOR_BUILD_FOLDER%\build"
-  - mkdir "%METAL_BUILD_PATH%"
+  - set "SOURCE_PATH=%APPVEYOR_BUILD_FOLDER%"
+  - set "BUILD_PATH=%APPVEYOR_BUILD_FOLDER%\build"
+  - mkdir "%BUILD_PATH%"
 
-  - set "CMAKE_ARGS=%METAL_SOURCE_PATH%"
+  - set "CMAKE_ARGS=%SOURCE_PATH%"
   - if defined GENERATOR (set "CMAKE_ARGS=%CMAKE_ARGS% -G"%GENERATOR%"")
   - set "CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DBOOST_ROOT=C:/Libraries/boost/"
 
   - cmake --version
   - echo cmake %CMAKE_ARGS%
-  - pushd "%METAL_BUILD_PATH%" && cmake %CMAKE_ARGS% & popd
+  - pushd "%BUILD_PATH%" && cmake %CMAKE_ARGS% & popd
 
 build_script:
   - if "%CHECK_DOC%" equ "true" (
-        cmake --build "%METAL_BUILD_PATH%" --target doc --config "%CONFIGURATION%"
+        cmake --build "%BUILD_PATH%" --target doc --config "%CONFIGURATION%"
     ) else (
-        pushd "%METAL_BUILD_PATH%" && ctest -C "%CONFIGURATION%" --output-on-failure -E ^test.format & popd
+        pushd "%BUILD_PATH%" && ctest -C "%CONFIGURATION%" --output-on-failure -E ^test.format & popd
     )
 
 notifications:
